--- a/src/UI/HR.LeaveManagement.Mvc/Views/LeaveTypes/Index.cshtml
+++ b/src/UI/HR.LeaveManagement.Mvc/Views/LeaveTypes/Index.cshtml
@@ -25,23 +25,25 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DefaultDays)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new {  id = item.Id  }) |
-                @Html.ActionLink("Details", "Details", new {  id = item.Id  }) |
-                @Html.ActionLink("Delete", "Delete", new {  id = item.Id  })
-            </td>
-        </tr>
-}
+    @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DefaultDays)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new {  id = item.Id  }) |
+                    @Html.ActionLink("Details", "Details", new {  id = item.Id  }) |
+                    <form asp-area="" asp-controller="LeaveTypes" asp-action="Delete" asp-route-id="@item.Id" method="post">
+                        <button type="submit" class="btn btn-link" onclick="return confirm('Are you sure you want to delete this record?')">Delete</button>
+                    </form>
+                </td>
+            </tr>
+    }
     </tbody>
 </table>
