--- a/src/UI/HR.LeaveManagement.Mvc/Views/User/Login.cshtml
+++ b/src/UI/HR.LeaveManagement.Mvc/Views/User/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model HR.LeaveManagement.Mvc.Models.LoginVM
+﻿@model HR.LeaveManagement.Mvc.Models.User.LoginVm
 
 @{
     ViewData["Title"] = "Login";
