--- a/src/UI/HR.LeaveManagement.Mvc/Views/_ViewImports.cshtml
+++ b/src/UI/HR.LeaveManagement.Mvc/Views/_ViewImports.cshtml
@@ -1,4 +1,9 @@
 ﻿@using HR.LeaveManagement.Mvc
 @using HR.LeaveManagement.Mvc.Models
+@using HR.LeaveManagement.Mvc.Models.Employee
+@using HR.LeaveManagement.Mvc.Models.LeaveAllocation
+@using HR.LeaveManagement.Mvc.Models.LeaveRequest
+@using HR.LeaveManagement.Mvc.Models.LeaveType
+@using HR.LeaveManagement.Mvc.Models.User
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
