--- a/src/UI/HR.LeaveManagement.Mvc/Views/LeaveTypes/Index.cshtml
+++ b/src/UI/HR.LeaveManagement.Mvc/Views/LeaveTypes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HR.LeaveManagement.Mvc.Models.LeaveTypeVM>
+﻿@model IEnumerable<LeaveTypeVm>
 
 @{
     ViewData["Title"] = "Index";
