--- a/src/UI/HR.LeaveManagement.Mvc/Views/User/Register.cshtml
+++ b/src/UI/HR.LeaveManagement.Mvc/Views/User/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model HR.LeaveManagement.Mvc.Models.RegisterVM
+﻿@model HR.LeaveManagement.Mvc.Models.User.RegisterVm
 
 @{
     ViewData["Title"] = "Register";
