--- a/src/UI/HR.LeaveManagement.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/UI/HR.LeaveManagement.Mvc/Views/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@
                                     <a class="nav-link text-dark" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="LeaveAllocations" asp-action="Index">Leave Types</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="LeaveRequests" asp-action="Index">Leave Requests</a>
                                 </li>
                             }
